--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -532,7 +532,7 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** it's arrritte"
+    "**Answer:** The logistic regression model performs exceptionally well for healthy loans, achieving both high precision and recall. For high-risk loans, the precision is good, but there is room for improvement in recall. It correctly identifies a significant portion of high-risk loans, but there is a slightly higher likelihood of missing some of them."
    ]
   },
   {
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,8 +615,9 @@
     "\n",
     "# Fit the model using the resampled training data\n",
     "lr_model_res = logistic_regression_model.fit(X_res, y_res)\n",
+    "\n",
     "# Make a prediction using the testing data\n",
-    "predicitions_res = lr_model_res.predict(y_res)"
+    "predictions_res = lr_model_res.predict(X_test)"
    ]
   },
   {
@@ -634,32 +635,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9936781215845847"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Print the balanced_accuracy score of the model \n",
-    "# YOUR CODE HERE!"
+    "balanced_accuracy_score(y_test, predictions_res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[18649,   116],\n",
+       "       [    4,   615]], dtype=int64)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "confusion_matrix(y_test, predictions_res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                precision    recall  f1-score   support\n",
+      "\n",
+      "  healthy loan       1.00      0.99      1.00     18765\n",
+      "high-risk loan       0.84      0.99      0.91       619\n",
+      "\n",
+      "      accuracy                           0.99     19384\n",
+      "     macro avg       0.92      0.99      0.95     19384\n",
+      "  weighted avg       0.99      0.99      0.99     19384\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "print(classification_report(y_test, predictions_res, target_names=target_names))"
    ]
   },
   {
@@ -675,7 +715,7 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** YOUR ANSWER HERE!"
+    "**Answer:** The logistic regression model with random oversampling performs exceptionally well for both healthy and high-risk loans. It achieves high precision and recall for healthy loans and demonstrates notable improvement in recall for high-risk loans compared to the original logistic regression model. The oversampling technique appears effective in addressing the imbalanced nature of the dataset, leading to improved performance in predicting high-risk loans."
    ]
   }
  ],
